adding hangman game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,9 @@
 			<hr>
 
 			<div class="img-holder">
-				<img src="./assets/images/placeholder.png" alt="placeholder" width="250px" height="200px">
+				<a href="https://bwilliams1991.github.io/Hangman-Game/." target="_blank"><img src="./assets/images/p05f41wj.jpg" alt="Hangman" width="250px" height="200px"></a> 
 
-				<h5 class="img-text">placeholder</h5>
+						<h5 class="img-text  hangman">Hangman</h5>
 			</div>
 
 			<div class="img-holder">
