adding rps and train schedule

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,27 +44,40 @@
 			<hr>
 
 			<div class="img-holder">
-				<a href="https://bwilliams1991.github.io/Hangman-Game/." target="_blank"><img src="./assets/images/p05f41wj.jpg" alt="Hangman" width="250px" height="200px"></a> 
+				<a href="https://bwilliams1991.github.io/Hangman-Game/." target="_blank">
+					<img src="./assets/images/p05f41wj.jpg" alt="Hangman" width="250px" height="200px">
+				</a>
 
-						<h5 class="img-text  hangman">Hangman</h5>
+				<h5 class="img-text  hangman">Hangman</h5>
 			</div>
 
 			<div class="img-holder">
-					<a href="https://bwilliams1991.github.io/week-4-game/." target="_blank"><img src="./assets/images/unnamed.jpg" alt="RPG" width="250px" height="200px"></a> 
+				<a href="https://bwilliams1991.github.io/week-4-game/." target="_blank">
+					<img src="./assets/images/unnamed.jpg" alt="RPG" width="250px" height="200px">
+				</a>
 
-				<h5 class="img-text">StarWars RPG</h5>
+				<h5 class="img-text rpg">StarWars RPG</h5>
 			</div>
 
 			<div class="img-holder">
-				<img src="./assets/images/placeholder.png" alt="placeholder" width="250px" height="200px">
+				<a href="https://bwilliams1991.github.io/SNESTrivia/" target="_blank">
+					<img src="./assets/images/tenor.gif" alt="trivia" width="250px" height="200px">
 
-				<h5 class="img-text">placeholder</h5>
+					<h5 class="img-text trivia">SNES Trivia</h5>
 			</div>
 
 			<div class="img-holder">
-				<img src="./assets/images/placeholder.png" alt="placeholder" width="250px" height="200px">
+				<a href="https://bwilliams1991.github.io/RPS-Multiplayer/" target="_blank">
+					<img src="./assets/images/rps.png" alt="Rock Paper Scissors" width="250px" height="200px">
 
-				<h5 class="img-text">placeholder</h5>
+					<h5 class="img-text rps">RPS-Multi</h5>
+			</div>
+
+			<div class="img-holder">
+				<a href="https://bwilliams1991.github.io/TrainSchedule/." target="_blank">
+					<img src="./assets/images/train.png" alt="Train Schedule" width="250px" height="200px">
+
+					<h5 class="img-text train">Train Schedule</h5>
 			</div>
 
 			<div class="img-holder">
