--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,14 @@
 					<h5 class="img-text train">Train Schedule</h5>
 			</div>
 
+			<div class="col-md-3 img-holder">
+
+				<a href="https://bwilliams1991.github.io/LIRI-bot/." target="_blank">
+					<img src="./assets/images/source-code.png" alt="LIRI-bot" width="250px" height="200px">
+
+					<h5 class="img-text liri">LIRI-bot</h5>
+			</div>
+
 			<div class="img-holder">
 				<img src="./assets/images/placeholder.png" alt="placeholder" width="250px" height="200px">
 
